testing/ui-tests/src/incorrect/substitute_path_not_absolute.stderr
error: Type substitution error: `substitute_type(with = <path>)` must be a path prefixed with 'crate::' or '::'
 --> src/incorrect/substitute_path_not_absolute.rs:5:16
  |
5 |         with = "sp_runtime::Perbill"
  |                ^^^^^^^^^^^^^^^^^^^^^
